syntax = "proto3";

package loginsrv;

option go_package = "./proto;loginsrv";

service Loginsrv {
	rpc CheckRegister(CheckRequest) returns (CheckResponse) {} //JS part browser 
	rpc Register(RegisterRequest) returns (RegisterResponse) {}//corepass applicatio
	rpc QrCode(QrCodeRequest) returns (QrCodeResponse) {}//implementor 

}
message CheckResponse {
	string Redirect = 1 ; //need to talk 
}

message CheckRequest { 
	string challenge = 1 ;
	string identifire = 2 ; 
	string session = 3 ;
	bool accept = 4; 
	bool remember = 5 ; 
}


message RegisterResponse {
	// string redirectUrl = 1 ; 
}

message RegisterRequest {
	bytes signature = 1; 
	bytes session = 2 ; 
	string identifire = 3; 
	string challenge = 4;
	bytes coreID = 5;
}

message QrCodeRequest {
	string challenge = 1;
}

message QrCodeResponse {
	string challenge = 1;
	string identifier = 2;
	string session = 3;
	string link = 4; 
	string qrcode = 5;
}
